# llm-eval-mini

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
.github/workflows/: ci.yml
data/: prompts.csv  ratings_control.csv  ratings_rubric.csv
notebooks/: quickstart.ipynb
reports/: summary.tsv
scripts/: generate_mock_outputs.py
src/eval/: metrics.py
src/pipeline/: run_eval.py
stress_tests/: README.md  prompts_adversarial.csv  stress_eval.py
tests/: conftest.py  test_metrics.py
