[metadata]
name = llm-eval-mini
version = 0.0.1

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    pandas>=2.0.0
    matplotlib>=3.7.0

[options.packages.find]
where = src

[tool:pytest]
addopts = -q
testpaths = tests

[flake8]
max-line-length = 100
extend-ignore = E203, W503
